# customer_support_classifier

./: .gitignore  README.md  docker-compose.yaml  main.py  priority_report.csv  pyproject.toml  report.csv  test.csv
api/: __init__.py
models/: facebook_bart_large_mnli.py
models/facebook_bart_large_mnli/: __init__.py  load_model.py
processes/: preprocess.py  seed_db.py
schemas/: model_response.py  request_create.py
src/: alembic.ini  dockerfile  main.py  priority_results_df.csv  pyproject.toml  queue_results_df.csv  report_filtered.csv  requirements.txt
src/alembic/: env.py
src/alembic/versions/: 43cfab12ad1d_initial.py  4495e9417cac_initial_ticket_related_schema.py  8a2d77e44d68_initial_ticket_related_schema.py  a38c3c959598_initial.py
src/api/: __init__.py
src/config/: data_config.yaml  live_config.yaml  test_config.yaml  test_config_mnli_mnli.yaml
src/db/: __init__.py  dataset.py  init_tables.py  requests.py
src/models/: __init__.py  charts_reports.py  model.py
src/models/facebook_bart_large_mnli/: __init__.py  load_model.py
src/models/rag/: __init__.py
src/processes/: ingest.py  preprocess.py  seed_database.py  test.py
src/schemas/db/: customer_support_dataset.py  support_request.py
src/schemas/pydantic/: model_response.py  postgres_config.py  request.py  request_create.py  run_configs.py
src/util/: load_configs.py  load_dataset.py
