[project]
name = "customer-support-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "fsspec>=2025.7.0",
    "huggingface-hub>=0.33.4",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.41",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "uvicorn>=0.35.0",
]
